@@ -4,6 +4,10 @@ use warnings;
 
 use Catalyst qw/Unicode::Encoding/;
 
+__PACKAGE__->config(
+  encoding => $ENV{TESTAPP_ENCODING}
+) if $ENV{TESTAPP_ENCODING};
+
 __PACKAGE__->setup;
 
 1;
